unpackaged/objects/Development_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Development Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEV-{000000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>